# RSM-Net

./: .gitignore  LICENSE.md  README.md  prototype.py  pyproject.toml  requirements.txt
docs/: architecture.md  experiments.md  findings.md  paper.md  review.md
experiments/: ablation_study.py  continual_learning.py  dual_benchmark.py
experiments/from_scratch/: experiment_from_scratch_h100.json
experiments/growth/: full_base_experiment.json  growth_full.json  task_id_eval.json
experiments/llm_adapter/: llm_experiment.json  rank_ablation.json  unfrozen_experiment.json
experiments/mlp/: ablation.json  dual_benchmark_results.json  experiment_results.json
experiments/unlearning/: unlearning_test.json
src/rsm_net/: __init__.py  activations.py  baselines.py  config.py  consolidation.py  encoder.py  layers.py  network.py  training.py
tests/: test_activations.py  test_consolidation.py  test_layers.py  test_network.py
